force-app/main/default/objects/SOandTTClick__c/SOandTTClick__c.object-meta.xml
<CustomObject>
    <label>SOandTTClick</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ReportFunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOandTTClicks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>