force-app/main/default/objects/SOandTTClick__c/fields/Address_Search__c.field-meta.xml
<CustomField>
    <fullName>Address_Search__c</fullName>
    <label>Number of times used Address Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>