force-app/main/default/objects/SOandTTClick__c/fields/CircuitID_Search__c.field-meta.xml
<CustomField>
    <fullName>CircuitID_Search__c</fullName>
    <label>Number of times used Circuit ID Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>