force-app/main/default/objects/SOandTTClick__c/fields/OrderNumber_Search__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber_Search__c</fullName>
    <label>Number of times used Order Number Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>