force-app/main/default/objects/SOandTTClick__c/fields/TN_Search__c.field-meta.xml
<CustomField>
    <fullName>TN_Search__c</fullName>
    <label>Number of times used TN Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>