force-app/main/default/objects/SOandTTClick__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>TN1_Search__c + TT_Search__c + CircuitID_Search__c + OrderNumber_Search__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>