force-app/main/default/objects/SOandTTClick__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To Store the User ID</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReportFunctions</relationshipName>
    <type>Lookup</type>
</CustomField>