force-app/main/default/objects/SOandTTClick__c/fields/Users_of_Tool__c.field-meta.xml
<CustomField>
    <fullName>Users_of_Tool__c</fullName>
    <label>Users of Tool</label>
    <referenceTo>Users_of_Tool__c</referenceTo>
    <relationshipName>ReportFunctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>